# Comparação entre dois pokémons, a partir do detalhe.
appId: com.efss7.pokedexapp
---
- launchApp:
    clearState: true

- tapOn: 'Ver detalhes de bulbasaur'
- tapOn: 'Comparar com outro pokémon'

- assertVisible: 'Comparar'
- tapOn: 'Toque para escolher'
- assertVisible: 'Escolher pokémon'
